Update for SpringBoot 3 and Java 17